# github-action-demo

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  README.md  compile_commands.json  deploy.yml  docker-compose.yml  dockerfile
.github/workflows/: build-test-deploy.yml  build-test.yml  ci.yaml  deploy-develop.yaml  deploy-production.yaml  deploy.yml
docs/html/: annotated.html  class_system_monitor-members.html  class_system_monitor.html  classes.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceutils.html  struct_system_info-members.html  struct_system_info.html  system__monitor_8h_source.html  utils_8h_source.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js
src/: main.cpp  system_monitor.cpp  system_monitor.h  utils.cpp  utils.h
src/core/: system_monitor.cpp  system_monitor.h
tests/: CMakeLists.txt  test_system_monitor.cpp  test_utils.cpp
